# json-to-csv

./: deploy.sh  pyproject.toml
src/json_to_csv/: json_to_csv.py
